[project]
name = "powerdatagen"
version = "0.0.1"
authors = [
    {name = "Balthazar Donon", email = "balthazar.donon@uliege.be"},
]
description = "Generates power grids datasets from a single snapshot."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = []

dependencies = [
    "numpy>=1.23.2",
    "pandapower>=2.9.0",
    "numba>=0.56.2"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = [""]
exclude = ["ENV", "doc"]
namespaces = false

[project.urls]
"Homepage" = "https://github.com/bdonon/powerdatagen"
"Bug Tracker" = "https://github.com/bdonon/powerdatagen/issues"